# omsi-map-tool

./: .gitignore  README.md
omsi-importer/: pyproject.toml
omsi-importer/data_samples/: simple_object.map  simple_spline.map  simple_spline_comment.txt
omsi-importer/src/pyomsi/parsers/: base_parser.py
omsi-importer/tests/: test_base_parser.py
