[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyomsi"
version = "0.1.0"
description = "OMSI 2 Map Parser and Converter"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.20.0" 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black"
]